--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,initial-scale=1">
     <script src="assets/JS/script.js"></script>
-    <title>DNA Tecnologia</title>
+    <title>Awax Tecnologia</title>
 </head>
 <body>
     <header>
